fixed project-grid h3 clipping

--- a/style.css
+++ b/style.css
@@ -387,8 +387,9 @@ footer img {
 }
 
 .project-card-grid > h3 {
+  padding-block: 0.15em;
   grid-area: label;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .project-card-grid > p {
